--- a/mockup/styles/style.css
+++ b/mockup/styles/style.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box; }
+
 .startpage #page-wrapper .text-center {
   text-align: center; }
 .startpage #page-wrapper #header {
