--- a/mockup/styles/style.css
+++ b/mockup/styles/style.css
@@ -29,12 +29,12 @@
       height: 50px; }
     .startpage #page-wrapper #content .row .button .like {
       color: #2cb145;
-      padding: 12px 15px 0 15px; }
+      padding: 2px 0 0 12px; }
       .startpage #page-wrapper #content .row .button .like #like {
         fill: currentColor; }
     .startpage #page-wrapper #content .row .button .dislike {
       position: relative;
-      padding: 15px;
+      padding: 10px 0 0 7px;
       left: 22px; }
       .startpage #page-wrapper #content .row .button .dislike #cross {
         position: absolute;
