--- a/Design/Snippets/style.css
+++ b/Design/Snippets/style.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box; }
+
 body {
   background: #f5f5f5; }
 
@@ -9,8 +12,7 @@ body {
   border: 7px solid #d9d9d9;
   line-height: calc(80px + 14px);
   text-align: center;
-  background: #ffffff;
-  float: left; }
+  background: #ffffff; }
   .button .icon {
     width: 50px;
     height: 50px; }
@@ -40,5 +42,28 @@ body {
         border-radius: 4px;
         background: #ff5a00;
         transform: rotate(90deg); }
+
+.picture-container {
+  width: 320px;
+  height: 400px;
+  background: #d9d9d9;
+  border-radius: 7px;
+  padding: 10px;
+  position: relative;
+  z-index: 0;
+  /*&:before {
+      content: "";
+      position: absolute;
+      width: 320px;
+      height: 400px;
+      background: $color-darkgrey;
+      z-index: -1;
+  }*/ }
+  .picture-container #photo {
+    background: url("paard.jpg") no-repeat center center;
+    background-size: cover;
+    width: 300px;
+    height: 380px;
+    border-radius: 4px; }
 
 /*# sourceMappingURL=style.css.map */
