--- a/Design/Snippets/style.scss
+++ b/Design/Snippets/style.scss
@@ -1,61 +1,92 @@
 $border-color: #d9d9d9;
 $color-green: #2cb145;
 $color-red: #ff5a00;
+$color-darkgrey: #bfbfbf;
+$border-radius: 7px;
 
+* {
+    box-sizing: border-box;
+}
 
 body {
-  background: #f5f5f5;
+    background: #f5f5f5;
 }
 
 .button {
-  display: block;
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  border: 7px solid $border-color;
-  line-height: calc(80px + 14px);
-  text-align: center;
-  background: #ffffff;
-  float: left;
+    display: block;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border: 7px solid $border-color;
+    line-height: calc(80px + 14px);
+    text-align: center;
+    background: #ffffff;
 
-  .icon {
-    width: 50px;
-    height: 50px;
-  }
-
-  .like {
-    color: $color-green;
-    padding: 12px 15px 0 15px;
-
-    #like {
-      fill: currentColor;
+    .icon {
+        width: 50px;
+        height: 50px;
     }
-  }
 
-  .dislike {
+    .like {
+        color: $color-green;
+        padding: 12px 15px 0 15px;
+
+        #like {
+            fill: currentColor;
+        }
+    }
+
+    .dislike {
+        position: relative;
+        padding: 15px;
+        left: 22px;
+
+        #cross {
+            position: absolute;
+            display: block;
+            width: 7px;
+            height: 50px;
+            border-radius: 4px;
+            background: $color-red;
+            transform: rotate(45deg);
+
+            &:after {
+                content: "";
+                position: absolute;
+                display: block;
+                width: 7px;
+                height: 50px;
+                border-radius: 4px;
+                background: $color-red;
+                transform: rotate(90deg);
+            }
+        }
+    }
+}
+
+.picture-container {
+    width: 320px;
+    height: 400px;
+    background: $border-color;
+    border-radius: $border-radius;
+    padding: 10px;
     position: relative;
-    padding: 15px;
-    left: 22px;
+    z-index: 0;
 
-    #cross {
-      position: absolute;
-      display: block;
-      width: 7px;
-      height: 50px;
-      border-radius: 4px;
-      background: $color-red;
-      transform: rotate(45deg);
-
-      &:after {
+    /*&:before {
         content: "";
         position: absolute;
-        display: block;
-        width: 7px;
-        height: 50px;
+        width: 320px;
+        height: 400px;
+        background: $color-darkgrey;
+        z-index: -1;
+    }*/
+
+    #photo {
+        background: url("paard.jpg") no-repeat center center;
+        background-size: cover;
+        width: 300px;
+        height: 380px;
         border-radius: 4px;
-        background: $color-red;
-        transform: rotate(90deg);
-      }
     }
-  }
 }
