--- a/mockup/styles/style.scss
+++ b/mockup/styles/style.scss
@@ -141,8 +141,16 @@ $thin-font: 100;
             .picture-container {
             }
 
+
             .row {
                 margin: 15px 0 25px;
+
+                .book{
+
+                    img {
+                        border-radius:7px;
+                    }
+                }
             }
         }
     }
