Recode first page without stupid bootstrap. Issue #4 https://github.com/oSoc15/bibnet/issues/4

--- a/mockup/styles/style.css
+++ b/mockup/styles/style.css
@@ -77,6 +77,8 @@
   height: auto; }
 .suggestion #page-wrapper #content .row {
   margin: 15px 0 25px; }
+  .suggestion #page-wrapper #content .row .book img {
+    border-radius: 7px; }
 
 .detail #page-wrapper .text-center {
   text-align: center; }
