--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -165,8 +165,10 @@
   background: rgba(255, 255, 255, 0.9); }
 
 .detail .bookcover img {
-  height: 655px;
-  width: auto; }
+  height: 805px;
+  min-width: 100%;
+  width: auto;
+  border-radius: 10px; }
 
 .detail h1 {
   margin-top: 0; }
@@ -206,5 +208,13 @@
 
 .button.no {
   float: right !important; }
+
+.suggestion .book {
+  height: 390px;
+  overflow: hidden; }
+  .suggestion .book img {
+    min-height: 100%;
+    min-width: 100%;
+    max-height: auto; }
 
 /*# sourceMappingURL=style.css.map */
