--- a/src/jade/layouts/master.jade
+++ b/src/jade/layouts/master.jade
@@ -10,6 +10,8 @@ html
         meta(name="description", content="")
         meta(name="viewport", content="width=device-width, initial-scale=1")
 
+        link(href="http://fonts.googleapis.com/css?family=Questrial|Old+Standard+TT:400,700", rel="stylesheet", type="text/css")
+
         link(rel="stylesheet", href="css/normalize.css")
         link(rel="stylesheet", href="css/style.css")
 
