--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,8 +1,10 @@
 @import "../../bower_components/bourbon/app/assets/stylesheets/_bourbon.scss";
 @import "../../bower_components/neat/app/assets/stylesheets/_neat.scss";
 
-
+@import "config";
+@import "mixins";
 @import "stack";
 @import "overview";
+@import "buttons";
 @import "typography";
 @import "global";
