Some extra changes to both pages + new fonts

--- a/src/jade/step1.jade
+++ b/src/jade/step1.jade
@@ -1,7 +1,7 @@
 extends layouts/master
 
 block vars
-    - var bodyClass = "step1";
+    - var bodyClass = "swipe";
 
 block content
     div.container
