--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -1,6 +1,10 @@
 /** Fonts */
-$font-heading: "Questrial", "helvetica", sans-serif;
-$font-normal: "Old Standard TT", serif;
+$font-heading: "Neuton", "helvetica", sans-serif;
+$font-normal: "Neuton", serif;
+
+/** Text size */
+$font-h1: 28px;
+$font-h2: 20px;
 
 /** Colors */
 
