--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,7 +3,7 @@
 
 @import "config";
 @import "mixins";
-@import "stack";
+@import "swipe";
 @import "overview";
 @import "buttons";
 @import "typography";
