--- a/src/jade/layouts/master.jade
+++ b/src/jade/layouts/master.jade
@@ -10,7 +10,7 @@ html
         meta(name="description", content="")
         meta(name="viewport", content="width=device-width, initial-scale=1")
 
-        link(href="http://fonts.googleapis.com/css?family=Questrial|Old+Standard+TT:400,700", rel="stylesheet", type="text/css")
+        link(href="http://fonts.googleapis.com/css?family=Neuton:400,700,800", rel="stylesheet", type="text/css")
 
         link(rel="stylesheet", href="css/normalize.css")
         link(rel="stylesheet", href="css/style.css")
@@ -21,6 +21,6 @@ html
 
         block content
 
-        script(type="text/javascript", src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js")
+        script(type="text/javascript", src="https:///ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js")
         script window.jQuery || document.write("<script src="js/jquery.min.js"><\/script>")
         script(type="text/javascript", src="js/app.js")
