--- a/src/jade/step2.jade
+++ b/src/jade/step2.jade
@@ -1,11 +1,12 @@
 extends layouts/master
 block vars
-    - var bodyClass = "step2";
+    - var bodyClass = "overview";
 
 block content
     div.container
         header
             h1 Dit zijn jouw <strong>suggesties</strong>
+            span <svg xmlns="http://www.w3.org/2000/svg" height="16" id="Layer_1" version="1.1" viewBox="0 0 16 16" width="16" xml:space="preserve" enable-background="new 0 0 16 16"><path d="M14 8c-0.61 0-0.9 0.43-1 0.88C12.64 10.52 11.08 13 8 13c-0.76 0-1.47-0.17-2.11-0.47L6.41 12C6.77 11.66 7 11.45 7 11c0-0.52-0.44-1-1-1H3c-0.61 0-1 0.49-1 1v3c0 0.54 0.43 1 1 1 0.48 0 0.69-0.27 1-0.59l0.41-0.41C5.46 14.63 6.69 15 8 15c4.99 0 7-4.75 7-5.94C15 8.34 14.47 8 14 8zM3 7.12C3.37 5.49 4.92 3 8 3c0.76 0 1.47 0.17 2.11 0.47L9.59 4C9.23 4.34 9 4.56 9 5c0 0.52 0.44 1 1 1h3c0.61 0 1-0.49 1-1V2c0-0.54-0.43-1-1-1 -0.48 0-0.69 0.27-1 0.59l-0.41 0.41C10.54 1.37 9.32 1 8 1 3.01 1 1 5.75 1 6.94 1 7.66 1.53 8 2 8 2.61 8 2.9 7.57 3 7.12z"/></svg>
         section.books
             each val, index in ['book-1.png', 'book-2.png', 'book-3.png', 'book-1.png', 'book-3.png', 'book-1.png', 'book-3.png', 'book-2.png']
                 div.book
