--- a/src/sass/_overview.scss
+++ b/src/sass/_overview.scss
@@ -1,17 +1,54 @@
-.book {
-    @include span-columns(3);
-    @include omega(4n);
+.overview {
+    header {
+        h1 {
+            float: left;
+        }
+        span {
+            float: right;
 
-    margin-bottom: 30px;
-    
-    figure {
-        @include box-shadow(220px, 280px);
+            svg {
+                float: right;
+                width: 22px;
+                height: 22px;
+                margin-top: 12px;
+                fill: #333;
+            }
+        }
+    }
+    .book {
+        @include span-columns(3);
+        @include omega(4n);
 
-        background-size: cover;
+        margin-bottom: 30px;
 
-        border-radius: 2px;
+        figure {
+            @include box-shadow(220px, 280px);
 
-        left: 50%;
-        margin-left: -(220px/2);
+            background-size: cover;
+
+            border-radius: 2px;
+
+            left: 50%;
+            margin-left: -(220px/2);
+
+            &:before {
+                content: "";
+                position: absolute;
+
+                width: 15px;
+
+                top: 0;
+                bottom: 0;
+
+                background: linear-gradient(
+                    to right,
+                    rgba(0,0,0,0.05) 0%,
+                    rgba(0,0,0,0) 32%,
+                    rgba(0,0,0,0.2) 55%,
+                    rgba(0,0,0,0) 65%,
+                    rgba(0,0,0,0) 100%
+                );
+            }
+        }
     }
 }
