--- a/src/jade/layouts/master.jade
+++ b/src/jade/layouts/master.jade
@@ -22,5 +22,8 @@ html
         block content
 
         script(type="text/javascript", src="https:///ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js")
-        script window.jQuery || document.write("<script src="js/jquery.min.js"><\/script>")
-        script(type="text/javascript", src="js/app.js")
+        script(type="text/javascript", src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js")
+        script(type="text/javascript", src="js/jquery.transform.js")
+        script(type="text/javascript", src="js/jquery.slide.js")
+        //script(type="text/javascript", src="js/app.js")
+        script(type="text/javascript", src="js/swipe.js")
