--- a/src/sass/_overview.scss
+++ b/src/sass/_overview.scss
@@ -57,6 +57,7 @@
     position: absolute;
     top: 127px;
     z-index: 2;
+    @include outer-container(960px);
 
     .sidebar {
         @include span-columns(4);
@@ -75,6 +76,18 @@
     .maincontent {
         @include span-columns(8);
         @include omega();
+
+        .meta {
+            border-top: 1px solid rgba($color-black, .2);
+            padding-top: 10px;
+
+            strong {
+                padding-right: 10px;
+            }
+            span:nth-child(2) {
+                margin-left: $spacing-small;
+            }
+        }
     }
 }
 
