--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -5,6 +5,7 @@ $font-normal: "Neuton", serif;
 /** Text size */
 $font-h1: 28px;
 $font-h2: 20px;
+$font-p: 18px;
 
 /** Colors */
 $color-black: #333;
