I have no idea.

--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -1,6 +1,6 @@
 /** Fonts */
-$font-heading: "Neuton", "helvetica", sans-serif;
-$font-normal: "Neuton", serif;
+$font-heading: 'Lato', sans-serif;
+$font-normal: 'Lato', sans-serif;
 
 /** Text size */
 $font-h1: 28px;
