--- a/src/jade/layouts/master.jade
+++ b/src/jade/layouts/master.jade
@@ -10,7 +10,7 @@ html
         meta(name="description", content="")
         meta(name="viewport", content="width=device-width, initial-scale=1")
 
-        link(href="http://fonts.googleapis.com/css?family=Neuton:400,700,800", rel="stylesheet", type="text/css")
+        link(href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic", rel="stylesheet", type="text/css")
 
         link(rel="stylesheet", href="css/normalize.css")
         link(rel="stylesheet", href="css/style.css")
@@ -25,5 +25,5 @@ html
         script(type="text/javascript", src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js")
         script(type="text/javascript", src="js/jquery.transform.js")
         script(type="text/javascript", src="js/jquery.slide.js")
-        //script(type="text/javascript", src="js/app.js")
+        script(type="text/javascript", src="js/app.js")
         script(type="text/javascript", src="js/swipe.js")
