--- a/src/jade/step1.jade
+++ b/src/jade/step1.jade
@@ -6,16 +6,11 @@ block vars
 block content
     div.container
         header
-            h1 Hallo ik ben Bieblo
+            h1 Hallo ik ben <strong>Bieblo</strong>
             p Swipe jouw favoriete plaatje naar rechts
         section.stack
             ul
-                li
-                    figure(style="background-image: url(images/tag-1.jpg);", data-id=1)
-                li
-                    figure(style="background-image: url(images/tag-2.jpg);", data-id=2)
-                li
-                    figure(style="background-image: url(images/tag-3.jpg);", data-id=3)
+
         section.controls
             a.dislike(href="#dislike") Niet leuk
             a.like(href="#like") Leuk
