--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -9,7 +9,15 @@ body {
 
 header {
     h1 {
-        letter-spacing: 2px;
+        letter-spacing: 5px;
+        text-transform: uppercase;
+        font-weight: 300;
+        text-shadow: 1.414px 1.414px 2px rgba(0, 0, 0, 0.2);
+
+
+        strong {
+            font-weight: 400;
+        }
     }
 }
 
