--- a/src/sass/_swipe.scss
+++ b/src/sass/_swipe.scss
@@ -14,18 +14,21 @@
             margin-left: -($box-size/2);
             cursor: hand;
             zoom: 100%;
-            transition: .5s all;
+            overflow: hidden;
+
+            box-sizing: content-box;
+
+            @include tag-shadow();
 
             &.tag_2 {
                 zoom: 90%;
-                margin-top: -10px;
-
+                margin-top: -20px;
                 transition: .5s zoom;
             }
 
             &.tag_3 {
                 zoom: 80%;
-                margin-top: -22px;
+                margin-top: -43px;
                 transition: .5s zoom;
             }
 
