Dynamic loading books

--- a/src/jade/step1.jade
+++ b/src/jade/step1.jade
@@ -1,7 +1,7 @@
 extends layouts/master
 
 block vars
-    - var bodyClass = "swipe";
+    - var bodyClass = "swipe noscroll";
 
 block content
     div.container
