--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -7,7 +7,7 @@
 
     background-size: cover;
     background-repeat:no-repeat;
-    background-position: center center;
+    background-position: top center;
 
     //box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.3), inset 0px 0px 25px 0px rgba(0, 0, 0, 0.25);
     box-shadow: 0 0 18px rgba(0, 0, 0, 0.3) inset;
