--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -1,6 +1,6 @@
 /** Fonts */
-$font-heading: 'Lato', sans-serif;
-$font-normal: 'Lato', sans-serif;
+$font-heading: 'Open Sans', sans-serif;
+$font-normal: 'Open Sans', sans-serif;
 
 /** Text size */
 $font-h1: 28px;
@@ -9,6 +9,7 @@ $font-p: 18px;
 
 /** Colors */
 $color-black: #333;
+$color-white: #fff;
 
 /** Spacing */
 $spacing-big: 120px;
