--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -1,5 +1,6 @@
 body {
-    background: url("../images/bg.png") repeat;
+    background: #00C8FF;
+    background-image: radial-gradient(48% 134%, rgba(255,255,255,0.50) 50%, rgba(255,255,255,0.00) 98%);
 }
 
 * {
@@ -11,15 +12,26 @@ body {
     margin-top: $spacing-normal;
 }
 
+.ui-mobile [data-role=page], .ui-mobile [data-role=dialog], .ui-page {
+    left: 50%;
+    margin-left: -480px;
+}
+.ui-overlay-a, .ui-page-theme-a, .ui-page-theme-a .ui-panel-wrapper {
+    background-color: transparent;
+}
+
+.ui-mobile .ui-page-active {
+    overflow-x: visible;
+}
+
 header {
     h1 {
         letter-spacing: 5px;
-        text-transform: uppercase;
         font-weight: 300;
         text-shadow: 1.414px 1.414px 2px rgba(0, 0, 0, 0.2);
 
         strong {
-            font-weight: 400;
+            font-weight: 600;
         }
     }
 }
