--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -12,9 +12,8 @@ h1, h2, h3 {
 h1 {
     font-size: $font-h1;
     letter-spacing: 5px;
-    text-transform: uppercase;
     font-weight: 300;
-    text-shadow: 1.414px 1.414px 2px rgba(0, 0, 0, 0.2);
+    color: $color-white;
 
     strong {
         font-weight: 400;
