--- a/src/jade/layouts/master.jade
+++ b/src/jade/layouts/master.jade
@@ -10,8 +10,8 @@ html
         meta(name="description", content="")
         meta(name="viewport", content="width=device-width, initial-scale=1")
 
-        link(href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic", rel="stylesheet", type="text/css")
-
+        link(href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700", rel="stylesheet", type="text/css")
+        link(rel="stylesheet", href="css/jquery.mobile-1.4.5.min.css")
         link(rel="stylesheet", href="css/normalize.css")
         link(rel="stylesheet", href="css/style.css")
 
@@ -21,8 +21,8 @@ html
 
         block content
 
-        script(type="text/javascript", src="https:///ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js")
-        script(type="text/javascript", src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js")
+        script(type="text/javascript", src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js")
+        script(type="text/javascript", src="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js")
         script(type="text/javascript", src="js/handlebars.min.js")
         script(type="text/javascript", src="js/jquery.transform.js")
         script(type="text/javascript", src="js/jquery.slide.js")
