--- a/src/sass/_overview.scss
+++ b/src/sass/_overview.scss
@@ -58,10 +58,11 @@
 .details {
     display: none;
     position: absolute;
-    top: 124px;
+    top: 60px;
     z-index: 2;
     overflow: hidden;
     @include outer-container(960px);
+    width: 960px;
 
     .sidebar {
         @include span-columns(4);
@@ -119,7 +120,7 @@
 .overlay {
     display: none;
     z-index: 1;
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
