Enhanced shadow & blur

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -17,7 +17,7 @@
     background-repeat:no-repeat;
     background-position: top center;
 
-    box-shadow: 0 0 18px rgba(0, 0, 0, 0.3) inset;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.3) inset, 0 0 4px rgba(0, 0, 0, 0.3);
 
     border-radius: $border-radius;
 }
