--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,7 @@
-
+/**
+ * @author: Shaun Janssens
+ * @copyright: open Summer of code
+ */
 @import "_config";
 @import "_mixins";
 @import "_reset";
