--- a/src/styles/_grid.scss
+++ b/src/styles/_grid.scss
@@ -1,3 +1,8 @@
+/**
+ * @author: Shaun Janssens
+ * @copyright: open Summer of code
+ */
+
 @mixin col($cols) {
     width: $cols / 12 * 100%;
     float: left;
