--- a/src/styles/_grid.scss
+++ b/src/styles/_grid.scss
@@ -3,6 +3,11 @@
  * @copyright: open Summer of code
  */
 
+.container {
+    max-width: $container-w;
+    margin: $spacing2 auto 0 auto;
+}
+
 @mixin col($cols) {
     width: $cols / 12 * 100%;
     float: left;
