--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -1,7 +1,10 @@
 /**
- * @author: Eric Meyer
- * @copyright: none (public domain)
+ * @author: Shaun Janssens
+ * @copyright: open Summer of code
  */
+* {
+    box-sizing: border-box;
+}
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
     margin: 0;
     padding: 0;
