--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -35,6 +35,10 @@ p {
     line-height: $line-height;
 }
 
+strong {
+    font-weight: bolder;
+}
+
 // Header
 header {
     margin: 0 0 $spacing3;
