--- a/src/styles/_step1.scss
+++ b/src/styles/_step1.scss
@@ -30,22 +30,27 @@
 
             box-sizing: content-box;
 
+            transition: .3s margin-top;
+
             @include tag-shadow();
 
             &.tag_2 {
                 zoom: 90%;
                 margin-top: -20px;
-                transition: .5s margin-top;
+                transition: .3s margin-top;
+                transition-delay: .1s;
             }
             &.tag_3 {
                 zoom: 80%;
                 margin-top: -43px;
-                transition: .5s margin-top;
+                transition: .3s all;
+                transition-delay: .4s;
             }
             &.tag_4 {
-                zoom: 0%;
+                zoom: 10%;
                 margin-top: -60px;
-                transition: .5s margin-top;
+                transition: .5s all;
+                transition-delay: .6s;
             }
 
             figure {
@@ -53,17 +58,17 @@
             }
 
             // Fake like dislike animation
-            .rotate-left {
+            &.rotate-left {
                 transform: rotate(30deg) scale(0.8);
                 transition: 1s;
-                margin-left: $tag-w !important;
+                margin-left: 400px !important;
                 cursor: e-resize;
                 opacity: 0;
             }
-            .rotate-right {
+            &.rotate-right {
                 transform: rotate(-30deg) scale(0.8);
                 transition: 1s;
-                margin-left: -$tag-w !important;
+                margin-left: -400px !important;
                 cursor: w-resize;
                 opacity: 0;
             }
