--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -23,6 +23,7 @@ $line-height: 1.8;
 
 /** Widths & heights */
 $container-w: 960px;
+$container-w-min: 320px;
 $tag-w: 360px;
 $tag-h: 360px;
 $book-w: 220px;
