--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -1,4 +1,4 @@
-@media only screen and (max-device-width: 980px) {
+@media only screen and (max-width: 980px) {
     body {
         overflow: visible;
         overflow-x: hidden;
@@ -7,12 +7,12 @@
         width: 33%;
     }
 }
-@media only screen and (max-device-width: 720px) {
+@media only screen and (max-width: 720px) {
     .overview main .book {
         width: 50%;
     }
 }
-@media only screen and (max-device-width: 500px) {
+@media only screen and (max-width: 500px) {
     .container {
         margin: 30px auto 0;
     }
