--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -15,6 +15,15 @@ body {
     overflow: hidden;
 }
 
+
+.bg-like {
+    background: #c2f490;
+}
+
+.bg-dislike {
+    background: #ec6b6b;
+}
+
 section,
 header,
 main,
