--- a/src/templates/detail-template.handlebars
+++ b/src/templates/detail-template.handlebars
@@ -1,6 +1,7 @@
 <div class="container">
     <div class="sidebar">
         <figure style="background-image: url('{{ coverimage }}');"></figure>
+        <p id="delete">Verwijderen van selectie</p>
     </div>
 
     <div class="maincontent">
@@ -10,8 +11,8 @@
         <h1>{{ title }}</h1>
         <p>{{ description }}</p>
         <div class="meta">
-            <span class="author"><strong>Auteur</strong> {{ author }}</span>
-            <span class="genre"><strong>Genre</strong> {{ genres }}</span>
+            <span class="author"><i class="icon-author"></i> {{ author }}</span>
+            <span class="genre"><i class="icon-genre"></i> {{ genres }}</span>
         </div>
     </div>
 </div>
