--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -5,7 +5,7 @@
 
 body {
     background: $color-blue;
-    background-image: radial-gradient(48% 134%, rgba(255,255,255,0.50) 50%, rgba(255,255,255,0.00) 98%);
+    background-image: radial-gradient(48% 134%, rgba(255,255,255,0.30) 50%, rgba(255,255,255,0.00) 98%);
 
     font-family: $font-stack;
     font-size: $paragraph;
@@ -54,10 +54,11 @@ header {
 
     h1 {
         color: $color-white;
-        text-shadow: 1.5px 1.5px 2px rgba($color-black, 0.2);
+        letter-spacing: 1px;
+        text-shadow: 1px 1px 1.5px rgba($color-black, 0.15);
 
         strong {
-            font-weight: 700;
+            font-weight: 600;
         }
     }
 }
