--- a/src/styles/_step2.scss
+++ b/src/styles/_step2.scss
@@ -79,6 +79,7 @@
                         padding: 10px;
                         border-radius: 50%;
                         margin: -30px -30px 0;
+                        box-shadow: 0px 2px 6px 0px rgba(0,0,0,0.20);
                     }
                 }
 
