Close icon on mobile

--- a/src/templates/detail-template.handlebars
+++ b/src/templates/detail-template.handlebars
@@ -6,7 +6,7 @@
 
     <div class="maincontent">
         <div class="close" id="close">
-            <img src="img/icon-close.svg" alt="Sluiten">
+            <img src="img/icon-close.svg" alt="X">
         </div>
         <h1>{{ title }}</h1>
         <p>{{ description }}</p>
