--- a/src/styles/_step2.scss
+++ b/src/styles/_step2.scss
@@ -107,6 +107,10 @@
                         margin: -15px 0 10px;
                     }
 
+                    p {
+                        padding-bottom: $spacing2;
+                    }
+
                     .meta {
                         border-top: 1px solid rgba($color-black, .2);
                         padding-top: 10px;
