Added print & e-mail button (html) + alternative title if image doesn't exist

--- a/src/templates/detail-template.handlebars
+++ b/src/templates/detail-template.handlebars
@@ -1,7 +1,8 @@
 <div class="container">
     <div class="sidebar">
         <figure style="background-image: url('{{ coverimage }}');"></figure>
-        <p id="delete">Verwijderen van selectie</p>
+        <span id="print"><i class="icon-print"></i> Printen</span>
+        <span id="email"><i class="icon-email"></i> E-mailen </span>
     </div>
 
     <div class="maincontent">
