--- a/src/templates/overview-template.handlebars
+++ b/src/templates/overview-template.handlebars
@@ -1,5 +1,9 @@
 {{#each this}}
-    <div class="book" data-index="{{ @key }}">
-        <figure style="background-image: url('{{ coverimage }}');"></figure>
+    <div class="book">
+        <figure data-index="{{ @key }}">
+            <img src="{{ coverimage }}" alt="" />
+            <div class="title">{{ title }}</div>
+            <div class="delete"></div>
+        </figure>
     </div>
 {{/each}}
