--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -9,6 +9,7 @@ $color-white: #fff;
 $color-blue: #00C8FF;
 $color-like: #66DB7A;
 $color-dislike: #FE6858;
+$color-no-cover: #FFD51C;
 
 /** Spacings */
 $spacing1: 120px;
